Bug 208379 - Crash when attempting to join a group chat [QObject::setParent, KSystemTrayIcon::setMovie, KNotificationItemPrivate::syncLegacySystemTrayIcon]
Summary: Crash when attempting to join a group chat [QObject::setParent, KSystemTrayIc...
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 209003 213082 215342 217044 219411 223287 223335 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-09-24 13:30 UTC by Allen Winter
Modified: 2010-01-21 22:26 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Allen Winter 2009-09-24 13:30:52 UTC
Application: kopete (0.99.80)
KDE Version: 4.3.69 (KDE 4.3.69 (KDE 4.4 >= 20090923)) (Compiled from sources)
Qt Version: 4.5.0
Operating System: Linux 2.6.28-15-generic x86_64
Distribution: Ubuntu 9.04

What I was doing when the application crashed:
the crash happens after I attempt to join a group chat in jabber qca session. 

another thing: the icon in the status bar shows the '?' icon after I'm connected to jabber.

 -- Backtrace:
Application: Kopete (kopete), signal: Segmentation fault
[Current thread is 0 (LWP 1951)]

Thread 3 (Thread 0x7f08f9927950 (LWP 1955)):
#0  0x00007f090ed11496 in *__GI___poll (fds=0x17d2690, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f090b91177f in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f090b911a7c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f0910aa2f9a in QEventDispatcherGlib::processEvents (this=0x17daaa0, flags=@0x7f08f9926dd0) at kernel/qeventdispatcher_glib.cpp:325
#4  0x00007f0910a70fc8 in QEventLoop::processEvents (this=0x17f5480, flags=@0x7f08f9926e50) at kernel/qeventloop.cpp:149
#5  0x00007f0910a711d6 in QEventLoop::exec (this=0x17f5480, flags=@0x7f08f9926fe0) at kernel/qeventloop.cpp:196
#6  0x00007f08fa6872cb in QCA::SyncThread::run () from /usr/lib/libqca.so.2
#7  0x00007f0910980417 in QThreadPrivate::start (arg=0x7f08fc0bd110) at thread/qthread_unix.cpp:189
#8  0x00007f09106f73ba in start_thread (arg=<value optimized out>) at pthread_create.c:297
#9  0x00007f090ed1afcd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#10 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f08f9126950 (LWP 1956)):
#0  0x00007f090ed11496 in *__GI___poll (fds=0x1a1fc60, nfds=1, timeout=3026) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f090b91177f in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f090b911a7c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f0910aa2f9a in QEventDispatcherGlib::processEvents (this=0x19a64b0, flags=@0x7f08f9125f00) at kernel/qeventdispatcher_glib.cpp:325
#4  0x00007f0910a70fc8 in QEventLoop::processEvents (this=0x19bbc70, flags=@0x7f08f9125f80) at kernel/qeventloop.cpp:149
#5  0x00007f0910a711d6 in QEventLoop::exec (this=0x19bbc70, flags=@0x7f08f9125fe0) at kernel/qeventloop.cpp:196
#6  0x00007f08faaafb3b in XMPP::SyncThread::run (this=0x18e9a20) at /data/kde/trunk/KDE/kdenetwork/kopete/protocols/jabber/libiris/iris/irisnet/corelib/netinterface.cpp:151
#7  0x00007f0910980417 in QThreadPrivate::start (arg=0x18e9a20) at thread/qthread_unix.cpp:189
#8  0x00007f09106f73ba in start_thread (arg=<value optimized out>) at pthread_create.c:297
#9  0x00007f090ed1afcd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#10 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f0914cbd750 (LWP 1951)):
[KCrash Handler]
#5  0x00007f0910a86fa7 in QObject::setParent (this=0x16d4970, parent=0x16bdd80) at kernel/qobject.cpp:1831
#6  0x00007f0911741d8a in KSystemTrayIcon::setMovie (this=0x16bdd80, m=0x16d4970) at /data/kde/trunk/KDE/kdelibs/kdeui/notifications/ksystemtrayicon.cpp:394
#7  0x00007f091173acd7 in KNotificationItemPrivate::syncLegacySystemTrayIcon (this=0x16b9380) at /data/kde/trunk/KDE/kdelibs/kdeui/notifications/knotificationitem.cpp:748
#8  0x00007f091173c38f in KNotificationItem::setStatus (this=0x16b92a0, status=KNotificationItem::NeedsAttention) at /data/kde/trunk/KDE/kdelibs/kdeui/notifications/knotificationitem.cpp:105
#9  0x000000000041839c in KopeteSystemTray::startBlink (this=0x16b92a0) at /data/kde/trunk/KDE/kdenetwork/kopete/kopete/systemtray.cpp:156
#10 0x000000000041840f in KopeteSystemTray::slotNewEvent (this=0x16b92a0, event=0x22399f0) at /data/kde/trunk/KDE/kdenetwork/kopete/kopete/systemtray.cpp:193
#11 0x0000000000418788 in KopeteSystemTray::qt_metacall (this=0x16b92a0, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0x7fff1ccfe260)
    at /data/kde/trunk/KDE/kdenetwork/build-gcc/kopete/kopete/systemtray.moc:86
#12 0x00007f0910a8a72c in QMetaObject::activate (sender=0x15912f0, from_signal_index=12, to_signal_index=12, argv=0x7fff1ccfe260) at kernel/qobject.cpp:3057
#13 0x00007f0910a8ba6b in QMetaObject::activate (sender=0x15912f0, m=0x7f0913bed520, local_signal_index=8, argv=0x7fff1ccfe260) at kernel/qobject.cpp:3134
#14 0x00007f0913947963 in Kopete::ChatSessionManager::newEvent (this=0x15912f0, _t1=0x22399f0) at /data/kde/trunk/KDE/kdenetwork/build-gcc/kopete/libkopete/kopetechatsessionmanager.moc:166
#15 0x00007f0913947983 in Kopete::ChatSessionManager::postNewEvent (this=0x15912f0, e=0x22399f0) at /data/kde/trunk/KDE/kdenetwork/kopete/libkopete/kopetechatsessionmanager.cpp:184
#16 0x00007f0913907c97 in KopeteViewManager::messageAppended (this=0x1794170, msg=@0x7fff1ccfea80, manager=0x1bc6970)
    at /data/kde/trunk/KDE/kdenetwork/kopete/libkopete/private/kopeteviewmanager.cpp:400
#17 0x00007f0913907dcb in KopeteViewManager::qt_metacall (this=0x1794170, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7fff1ccfe890)
    at /data/kde/trunk/KDE/kdenetwork/build-gcc/kopete/libkopete/kopeteviewmanager.moc:85
#18 0x00007f0910a8a72c in QMetaObject::activate (sender=0x15912f0, from_signal_index=11, to_signal_index=11, argv=0x7fff1ccfe890) at kernel/qobject.cpp:3057
#19 0x00007f0910a8ba6b in QMetaObject::activate (sender=0x15912f0, m=0x7f0913bed520, local_signal_index=7, argv=0x7fff1ccfe890) at kernel/qobject.cpp:3134
#20 0x00007f09139479db in Kopete::ChatSessionManager::display (this=0x15912f0, _t1=@0x7fff1ccfea80, _t2=0x1bc6970)
    at /data/kde/trunk/KDE/kdenetwork/build-gcc/kopete/libkopete/kopetechatsessionmanager.moc:159
#21 0x00007f0913947d13 in Kopete::ChatSessionManager::qt_metacall (this=0x15912f0, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x7fff1ccfea40)
    at /data/kde/trunk/KDE/kdenetwork/build-gcc/kopete/libkopete/kopetechatsessionmanager.moc:95
#22 0x00007f0910a8a72c in QMetaObject::activate (sender=0x1bc6970, from_signal_index=5, to_signal_index=6, argv=0x7fff1ccfea40) at kernel/qobject.cpp:3057
#23 0x00007f0910a8a955 in QMetaObject::activate (sender=0x1bc6970, m=0x7f0913bed2c0, from_local_signal_index=1, to_local_signal_index=2, argv=0x7fff1ccfea40) at kernel/qobject.cpp:3154
#24 0x00007f0913942d2d in Kopete::ChatSession::messageAppended (this=0x1bc6970, _t1=@0x7fff1ccfea80, _t2=0x1bc6970)
    at /data/kde/trunk/KDE/kdenetwork/build-gcc/kopete/libkopete/kopetechatsession.moc:237
#25 0x00007f09139476c6 in Kopete::TemporaryKMMCallbackAppendMessageHandler::handleMessage (this=0x7f08fc0a9c80, event=0x7f08fc0a6ff0)
    at /data/kde/trunk/KDE/kdenetwork/kopete/libkopete/kopetechatsession.cpp:237
#26 0x00007f091396596e in Kopete::MessageHandler::handleMessageInternal (this=0x7f08fc0a9c80, event=0x7f08fc0a6ff0) at /data/kde/trunk/KDE/kdenetwork/kopete/libkopete/kopetemessagehandler.cpp:60
#27 0x00007f09139659d0 in Kopete::MessageHandler::messageAccepted (this=0x7f08fc042f70, event=0x7f08fc0a6ff0) at /data/kde/trunk/KDE/kdenetwork/kopete/libkopete/kopetemessagehandler.cpp:71
#28 0x00007f0913965a65 in Kopete::MessageHandler::handleMessage (this=0x7f08fc042f70, event=0x7f08fc0a6ff0) at /data/kde/trunk/KDE/kdenetwork/kopete/libkopete/kopetemessagehandler.cpp:65
#29 0x00007f08fafefc6d in HistoryMessageLogger::handleMessage (this=0x7f08fc042f70, event=0x7f08fc0a6ff0) at /data/kde/trunk/KDE/kdenetwork/kopete/plugins/history/historyplugin.cpp:105
#30 0x00007f091396596e in Kopete::MessageHandler::handleMessageInternal (this=0x7f08fc042f70, event=0x7f08fc0a6ff0) at /data/kde/trunk/KDE/kdenetwork/kopete/libkopete/kopetemessagehandler.cpp:60
#31 0x00007f0913963c8a in Kopete::ProcessMessageTask::start (this=0x2222cf0) at /data/kde/trunk/KDE/kdenetwork/kopete/libkopete/kopetemessagehandlerchain.cpp:166
#32 0x00007f0913963c1c in Kopete::ProcessMessageTask::qt_metacall (this=0x2222cf0, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff1ccfec80)
    at /data/kde/trunk/KDE/kdenetwork/build-gcc/kopete/libkopete/kopetemessagehandlerchain.moc:112
#33 0x00007f0910a8a72c in QMetaObject::activate (sender=0x2220940, from_signal_index=4, to_signal_index=4, argv=0x0) at kernel/qobject.cpp:3057
#34 0x00007f0910a8ba6b in QMetaObject::activate (sender=0x2220940, m=0x7f0910d98780, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3134
#35 0x00007f0910a92f6a in QSingleShotTimer::timeout (this=0x2220940) at .moc/debug-shared/qtimer.moc:76
#36 0x00007f0910a93063 in QSingleShotTimer::timerEvent (this=0x2220940) at kernel/qtimer.cpp:298
#37 0x00007f0910a884d2 in QObject::event (this=0x2220940, e=0x7fff1ccff510) at kernel/qobject.cpp:1073
#38 0x00007f090f9487d1 in QApplicationPrivate::notify_helper (this=0x1433780, receiver=0x2220940, e=0x7fff1ccff510) at kernel/qapplication.cpp:4084
#39 0x00007f090f948b79 in QApplication::notify (this=0x7fff1ccff930, receiver=0x2220940, e=0x7fff1ccff510) at kernel/qapplication.cpp:3631
#40 0x00007f0911709955 in KApplication::notify (this=0x7fff1ccff930, receiver=0x2220940, event=0x7fff1ccff510) at /data/kde/trunk/KDE/kdelibs/kdeui/kernel/kapplication.cpp:302
#41 0x00007f0910a73e58 in QCoreApplication::notifyInternal (this=0x7fff1ccff930, receiver=0x2220940, event=0x7fff1ccff510) at kernel/qcoreapplication.cpp:598
#42 0x00007f0912b83de9 in QCoreApplication::sendEvent () from /usr/local/lib/libQt3Support.so.4
#43 0x00007f0910aa664b in QTimerInfoList::activateTimers (this=0x1444900) at kernel/qeventdispatcher_unix.cpp:572
#44 0x00007f0910aa3d15 in timerSourceDispatch (source=0x14448a0) at kernel/qeventdispatcher_glib.cpp:164
#45 0x00007f090b90e20a in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#46 0x00007f090b9118e0 in ?? () from /usr/lib/libglib-2.0.so.0
#47 0x00007f090b911a7c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#48 0x00007f0910aa2f7c in QEventDispatcherGlib::processEvents (this=0x140c3f0, flags=@0x7fff1ccff770) at kernel/qeventdispatcher_glib.cpp:323
#49 0x00007f090f9f2dbf in QGuiEventDispatcherGlib::processEvents (this=0x140c3f0, flags=@0x7fff1ccff7d0) at kernel/qguieventdispatcher_glib.cpp:202
#50 0x00007f0910a70fc8 in QEventLoop::processEvents (this=0x7fff1ccff8a0, flags=@0x7fff1ccff850) at kernel/qeventloop.cpp:149
#51 0x00007f0910a711d6 in QEventLoop::exec (this=0x7fff1ccff8a0, flags=@0x7fff1ccff8c0) at kernel/qeventloop.cpp:196
#52 0x00007f0910a74688 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:880
#53 0x00007f090f948532 in QApplication::exec () at kernel/qapplication.cpp:3553
#54 0x0000000000415494 in main (argc=1, argv=0x7fff1cd00798) at /data/kde/trunk/KDE/kdenetwork/kopete/kopete/main.cpp:105

Reported using DrKonqi
Comment 1 Dario Andres 2009-09-30 20:02:39 UTC
*** Bug 209003 has been marked as a duplicate of this bug. ***
Comment 2 Dario Andres 2009-09-30 20:03:55 UTC
As bug 209003 describes (and according to the logic that it is using KSystemTrayIcon instead of the new one), this only happens if Kopete is not running into a KDE Session / Plasma
Regards
Comment 3 Allen Winter 2009-09-30 22:27:12 UTC
FWIW, I was running in a KDE desktop.. but an older KDE desktop.  The one that ships with Kubuntu 9.04.  Which is KDE 4.2.4
Comment 4 Dario Andres 2009-09-30 22:31:37 UTC
@Allen: is that right ? you had a kdebase from kde4.2 and a kopete and kdelibs from kde4.4trunk ?
Comment 5 Allen Winter 2009-09-30 22:40:20 UTC
yes, basically.

My desktop is running stock 4.2.4.  But kopete from KDE 4.2.4 doesn't work for me with jabber and QCA.  So I've been building and using kopete trunk for months now just fine up until the past week or so.
Comment 6 Dario Andres 2009-09-30 22:43:22 UTC
Ok, that would be explain why it was using teh KSystemTrayIcon fallback instead of the new protocol (which is not available in kdebase@4.2). Thanks
Comment 7 Dario Andres 2009-11-04 15:54:49 UTC
*** Bug 213082 has been marked as a duplicate of this bug. ***
Comment 8 Dario Andres 2009-11-20 00:03:44 UTC
*** Bug 215342 has been marked as a duplicate of this bug. ***
Comment 9 Dario Andres 2009-12-02 13:48:03 UTC
From bug 217044:
-- Information about the crash:
Kopete crashes shortly after logging in to all the protocols. I'm using the
Kopete of KDE-4.4.x-pre-alpha on top of XFCE on Mandriva Cooker, from the
Mandriva packages.

So.. another user not using Plasma and therefore fallback-ing to the old protocol.
Comment 10 Dario Andres 2009-12-02 13:48:20 UTC
*** Bug 217044 has been marked as a duplicate of this bug. ***
Comment 11 Eugenio Mondini 2009-12-13 17:03:12 UTC
(In reply to comment #2)
> As bug 209003 describes (and according to the logic that it is using
> KSystemTrayIcon instead of the new one), this only happens if Kopete is not
> running into a KDE Session / Plasma
> Regards

I recently recompiled with Qt 4.6 and kde from svn after beta1 and kopete does not crash anymore in my case, as described in bug #209003 when receiving notifications.
Comment 12 Dario Andres 2009-12-14 14:48:08 UTC
- Could anyone else confirm that this is fixed with a recent KDE SC + Qt4.6 builds ? Thanks
Comment 13 Dario Andres 2009-12-20 16:57:32 UTC
Mh, bug 219411 seems related to this but on KDESC4.4beta1+ Qt4.6.0
Comment 14 Dario Andres 2010-01-18 21:50:59 UTC
*** Bug 219411 has been marked as a duplicate of this bug. ***
Comment 15 Roman Jarosz 2010-01-19 01:11:08 UTC
*** Bug 223335 has been marked as a duplicate of this bug. ***
Comment 16 Roman Jarosz 2010-01-19 01:13:05 UTC
*** Bug 223287 has been marked as a duplicate of this bug. ***
Comment 17 Roman Jarosz 2010-01-19 01:14:00 UTC
SVN commit 1076869 by rjarosz:

When KSystemTrayIcon is deleted the movie is deleted too so use QPointer to catch this.
RegisterToDaemon already calls setLegacySystemTrayEnabled so the second call is useless.

BUG: 208379


 M  +0 -1      kstatusnotifieritem.cpp  
 M  +1 -1      kstatusnotifieritemprivate_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1076869
Comment 18 Roman Jarosz 2010-01-19 01:14:28 UTC
SVN commit 1076870 by rjarosz:

Backport commit 1076869.
When KSystemTrayIcon is deleted the movie is deleted too so use QPointer to catch this.
RegisterToDaemon already calls setLegacySystemTrayEnabled so the second call is useless.

CCBUG: 208379


 M  +0 -1      kstatusnotifieritem.cpp  
 M  +1 -1      kstatusnotifieritemprivate_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1076870
Comment 19 Roman Jarosz 2010-01-21 22:26:57 UTC
*** Bug 223255 has been marked as a duplicate of this bug. ***