When KSystemTrayIcon is deleted the movie is deleted too so use QPointer to catch this. RegisterToDaemon already calls setLegacySystemTrayEnabled so the second call is useless.

BUG: 208379

svn path=/trunk/KDE/kdelibs/; revision=1076869